--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+  <link href="styles/style.css" rel="stylesheet">
+  <link href="styles/normalize.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
-  <p>Привет, мир!</p>
+   <header class="page__header"> 
+    <div class="logo__place_header">
+      <h2 class="logo">Яндекс Практикум</h2>
+    </div>
+    <div class="header__title"><h1>Научиться Учиться</h1></div>
+   </header> 
   </div>
 </body>
 </html>
