--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link href="styles/style.css" rel="stylesheet">
-  <link href="styles/normalize.css">
+  <link href="styles/normalize.css" text="text/css" rel="stylesheet">
+  <link href="styles/style.css" text="text/css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
@@ -11,9 +11,19 @@
   <div class="page">
    <header class="page__header"> 
     <div class="logo__place_header">
-      <h2 class="logo">Яндекс Практикум</h2>
+      <h2 class="header__logo">Яндекс Практикум</h2>
     </div>
-    <div class="header__title"><h1>Научиться Учиться</h1></div>
+    <div class="header__title">
+      <h1 class="header__h1">Научиться учиться</h1>
+    </div>
+    <div class="header__subtitle"><p class="header__subtitle-paragraph">Какие современные и эффективные
+    подходы к обучению вы можете использовать в своей жизни? <a class="header__link-title" href="#">Узнать-></a></p>
+  </div>
+  <div class="header__main-ilustration">
+    <img class="header__ilustration" src="images/header-image.png" alt="header-image">
+  </div>
+  <div class="header__square-pic">
+  </div>
    </header> 
   </div>
 </body>
