--- a/index.html
+++ b/index.html
@@ -24,7 +24,24 @@
   </div>
   <div class="header__square-pic">
   </div>
-   </header> 
+   </header>
+  <section class="content">
+   <section class="description">
+    <div class="description__two-colums">
+      <div class="description__two-colums-brief">
+        <h3 class="description__h3">Главные проблемы в обучении</h3>
+      </div>
+    </div>
+    <div class="description__main-text">
+      <p class="description__main-text-paragrah">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+      </p>
+      <p>Вывод: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+      </p>
+      <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+      </p>
+    </div>
+   </section>
+  </section>  
   </div>
 </body>
 </html>
