Первая версия блока description

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       </div>
     </div>
     <div class="description__main-text">
-      <p class="description__main-text-paragrah">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+      <p class="description__main-text-paragrah-1">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
       </p>
-      <p>Вывод: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+      <p class="description__main-text-paragrah-2"><span class="bold-word">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
       </p>
-      <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+      <p class="description__main-text-paragrah-3">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
       </p>
     </div>
    </section>
