Сделан блок feynman

--- a/index.html
+++ b/index.html
@@ -35,12 +35,123 @@
     <div class="description__main-text">
       <p class="description__main-text-paragrah-1">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
       </p>
-      <p class="description__main-text-paragrah-2"><span class="bold-word">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+      <p class="description__main-text-paragrah-2"><span class="span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
       </p>
       <p class="description__main-text-paragrah-3">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
       </p>
     </div>
    </section>
+  </section>
+  <section class="digits">
+    <div class="digits__section-title">
+      <h1 class="digits__header1">Цифры и факты</h1>
+    </div>
+    <div class="digits__section-subtitle">
+      <h3 class="digits__header2">Про учёбу и мозг</h3>
+    </div>
+    <div class="digits__table">
+      <div class="digits__table-cell">
+        <div class="digits__table-heading">
+          <div class="table__heading">86 миллиардов</div>
+          <div class="table__text">Число нейронов в мозге человека</div>
+        </div>
+        <div class="digits__table-heading">
+          <div class="table__heading">2,1 миллиарда</div>
+          <div class="table__text">Число нуждающихся в повышении квалификации</div><div class="table__text-margin">Всемирный Банк, 2017</div>
+        </div>
+         <div class="digits__table-heading">
+          <div class="table__heading">1000 терабайт</div>
+          <div class="table__text">Объём памяти человека</div>
+        </div>
+         <div class="digits__table-heading">
+          <div class="table__heading">500 триллионовов</div>
+          <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+        </div>
+         <div class="digits__table-heading">
+          <div class="table__heading">420 миллионов</div>
+          <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</div><div class="table__text-margin">Всемирный Банк, 2017</div>
+        </div>
+         <div class="digits__table-heading">
+          <div class="table__heading">17-20 лет</div>
+          <div class="table__text">Пик обучаемости</div>
+        </div>
+         <div class="digits__table-heading">
+          <div class="table__heading">1885 год</div>
+          <div class="table__text">Открытие кривой забывания</div>
+        </div>
+         <div class="digits__table-heading">
+          <div class="table__heading">1889 год</div>
+          <div class="table__text">Открытие условного рефлекса</div>
+        </div>
+      </div>
+      </div>
+  </section>
+  <section class="feynman">
+    <div class="feynman__title">
+      <h1 class="feynman__header1">Метод Фейнмана</h1>
+    </div>
+    <div class="feynman__subtitle">
+      <h1 class="feynman__header2">Выучить и не забыть.</h1>
+    </div>
+    <div class="feynman__link">
+      <a href="#">Подробнее -></a>
+    </div>
+    <div class="feynman__image">
+      <img src="./images/feynman.png" alt="feynman_image">
+    </div>
+  </section>
+  <section class="kaufman">
+    <img class="kaufman__triangle" src="./images/kaufman-triangle.svg">
+    <div class="kaufman__section-title_theme_dark">
+      <h1 class="kaufman__header1">Принципы обучения</h1>
+    </div>
+    <div class="kaufman__section-subtitle_theme_dark">
+      <h3 class="digits__header2">От Джоша Кауфмана</h3>
+    </div>
+    <div class="kaufman__table_theme_dark">
+      <div class="kaufman__table-cell_theme_dark">
+        <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">1</div>
+          <div class="table__text_theme_dark">Выберите привлекательный проект.</div>
+        </div>
+        <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">2</div>
+          <div class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+        </div>
+         <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">3</div>
+          <div class="table__text_theme_dark">Определите целевой уровень мастерства.</div>
+        </div>
+         <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">4</div>
+          <div class="table__text_theme_dark">Разбейте навык на элементы.</div>
+        </div>
+         <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">5</div>
+          <div class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
+        </div>
+         <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">6</div>
+          <div class="table__text_theme_dark">Устраните препятствия для занятий.</div>
+        </div>
+         <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">7</div>
+          <div class="table__text_theme_dark">Выделите специальное время для занятий.</div>
+        </div>
+         <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">8</div>
+          <div class="table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
+        </div>
+        <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">9</div>
+          <div class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+        </div>
+        <div class="kaufman__table-heading_theme_dark">
+          <div class="table__heading_theme_dark">10</div>
+          <div class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
+        </div>
+      </div>
+      </div> 
   </section>  
   </div>
 </body>
