--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="page">
    <header class="page__header"> 
-    <div class="logo__place_header">
-      <h2 class="header__logo">Яндекс Практикум</h2>
+    <div class="logo logo__place_header">
+      <img src="./images/logo_place_header.svg" class="header__logo"> 
     </div>
     <div class="header__title">
       <h1 class="header__h1">Научиться учиться</h1>
@@ -29,7 +29,7 @@
    <section class="description">
     <div class="description__two-colums">
       <div class="description__two-colums-brief">
-        <h3 class="description__h3">Главные проблемы в обучении</h3>
+        <a href="#" class="description__link">Главные проблемы в обучении</a>
       </div>
     </div>
     <div class="description__main-text">
@@ -152,7 +152,30 @@
         </div>
       </div>
       </div> 
-  </section>  
+  </section>
+  <footer class="footer">
+    <div class="footer__columns">
+    <div class="footer__columns-content-copyright">
+      <img src="./images/logo_place_footer.svg" class="logo footer__place_logo">
+     <div class="footer__author"><p style="margin: 0">&COPY;Александр Гаврилов</p></div>
+    </div>
+    <div class="footer__column_content-info">
+      <div class="footer__column-heading">
+        <h3>О Практикуме</h3>
+        <div class="footer__column-links">
+          <p>Главная</p>
+          <p>Концепция</p>
+          <p style="margin-bottom: 16px;">Наставники</p>
+      </div>
+      </div>
+  </div>
+  <div class="footer__column_content-social">
+    <h3>Соцсети</h3>
+      <a href="#"><img src="./images/facebook_color_white.svg">Facebook</a>
+      <a href="#"><img src="./images/vk_color_white.svg">ВКонтакте</a>
+      <a href="#"><img src="./images/instagram_color_white.svg">Instagram</a>
+  </div>
+  </footer>
   </div>
 </body>
 </html>
