--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
   </div>
   <div class="footer__column_content-social">
     <h3>Соцсети</h3>
-      <a href="#"><img src="./images/facebook_color_white.svg">Facebook</a>
-      <a href="#"><img src="./images/vk_color_white.svg">ВКонтакте</a>
-      <a href="#"><img src="./images/instagram_color_white.svg">Instagram</a>
+      <a href="#"><img class="footer__social_icon" src="./images/facebook_color_white.svg">Facebook</a>
+      <a href="#"><img class="footer__social_icon" src="./images/vk_color_white.svg">ВКонтакте</a>
+      <a href="#"><img class="footer__social_icon" src="./images/instagram_color_white.svg">Instagram</a>
   </div>
   </footer>
   </div>
