--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
       <a href="#"><img class="footer__social_icon" src="./images/vk_color_white.svg">ВКонтакте</a>
       <a href="#"><img class="footer__social_icon" src="./images/instagram_color_white.svg">Instagram</a>
   </div>
+  </div>
   </footer>
   </div>
 </body>
