--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     подходы к обучению вы можете использовать в своей жизни? <a class="header__link-title" href="#">Узнать-></a></p>
   </div>
   <div class="header__main-ilustration">
-    <img class="header__ilustration" src="images/header-image.png" alt="header-image">
+    <img class="header__ilustration" src="images/header-image.png" alt="Опять двойка">
   </div>
   <div class="header__square-pic">
   </div>
@@ -97,7 +97,7 @@
       <a href="#">Подробнее -></a>
     </div>
     <div class="feynman__image">
-      <img src="./images/feynman.png" alt="feynman_image">
+      <img src="./images/feynman.png" alt="Ричард Фенман">
     </div>
   </section>
   <section class="kaufman">
