--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <link href="styles/normalize.css" text="text/css" rel="stylesheet">
-  <link href="styles/style.css" text="text/css" rel="stylesheet">
+  <link href="./styles/normalize.css" text="text/css" rel="stylesheet">
+  <link href="./styles/style.css" text="text/css" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
@@ -17,7 +17,7 @@
       <h1 class="header__h1">Научиться учиться</h1>
     </div>
     <div class="header__subtitle"><p class="header__subtitle-paragraph">Какие современные и эффективные
-    подходы к обучению вы можете использовать в своей жизни? <a class="header__link-title" href="#">Узнать-></a></p>
+    подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать-></a></p>
   </div>
   <div class="header__main-ilustration">
     <img class="header__ilustration" src="images/header-image.png" alt="Опять двойка">
@@ -28,16 +28,16 @@
   <section class="content">
    <section class="description">
     <div class="description__two-colums">
-      <div class="description__two-colums-brief">
+      <div class="two-colums-brief">
         <a href="#" class="description__link">Главные проблемы в обучении</a>
       </div>
     </div>
     <div class="description__main-text">
-      <p class="description__main-text-paragrah-1">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+      <p class="description__main-text-paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
       </p>
-      <p class="description__main-text-paragrah-2"><span class="span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+      <p class="description__main-text-paragraph"><span class="span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
       </p>
-      <p class="description__main-text-paragrah-3">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+      <p class="description__main-text-paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
       </p>
     </div>
    </section>
