Версия номер два

--- a/index.html
+++ b/index.html
@@ -1,182 +1,165 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <link href="./styles/normalize.css" text="text/css" rel="stylesheet">
-  <link href="./styles/style.css" text="text/css" rel="stylesheet">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-   <header class="page__header"> 
-    <div class="logo logo__place_header">
-      <img src="./images/logo_place_header.svg" class="header__logo"> 
+  <head>
+    <link href="./styles/normalize.css" text="text/css" rel="stylesheet">
+    <link href="./styles/style.css" text="text/css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Научиться учиться</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="page__header">
+        <img src="./images/logo_place_header.svg" class="header__logo"> 
+        <h1 class="header__title header__h1">Научиться учиться</h1>
+        <p class="header__subtitle-paragraph">Какие современные и эффективные
+          подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать-></a>
+        </p>
+        <img class="header__ilustration" src="images/header-image.png" alt="Опять двойка">
+        <div class="header__square-pic">
+        </div>
+      </header>
+      <main class="content">
+        <section class="description">
+          <div class="two-colums">
+            <div class="two-colums-brief">
+              <h2 class="two-colums-brief">Главные проблемы в обучении</h2>
+            </div>
+          </div>
+          <div class="description__main-text">
+            <p class="description__main-text-paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+            </p>
+            <p class="description__main-text-paragraph"><span class="span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+            </p>
+            <p class="description__main-text-paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+            </p>
+          </div>
+        </section>
+        <section class="digits">
+          <h3 class="digits__title section-title">Цифры и факты</h3>
+          <p class="section-subtitle digits__header2">Про учёбу и мозг</p>
+          <div class="table">
+            <div class="table__cell">
+              <div class="digits__table-heading">
+                <h4 class="table__heading">86 миллиардов</h4>
+                <p class="table__text">Число нейронов в мозге человека</p>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">2,1 миллиарда</h4>
+                <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                <div class="table__text-margin">Всемирный Банк, 2017</div>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">1000 терабайт</h4>
+                <p class="table__text">Объём памяти человека</p>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">500 триллионовов</h4>
+                <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">420 миллионов</h4>
+                <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</p>
+                <div class="table__text-margin">Всемирный Банк, 2017</div>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">17-20 лет</h4>
+                <p class="table__text">Пик обучаемости</p>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">1885 год</h4>
+                <p class="table__text">Открытие кривой забывания</p>
+              </div>
+              <div class="digits__table-heading">
+                <h4 class="table__heading">1889 год</h4>
+                <p class="table__text">Открытие условного рефлекса</p>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h5 class="feynman__header1 feynman__title">Метод Фейнмана</h5>
+          <h5 class="feynman__header2 feynman__subtitle">Выучить и не забыть.</h5>
+          <a class="feynman__link" href="#">Подробнее -></a>
+          <img class="feynman__image" src="./images/feynman.png" alt="Ричард Фенман">
+        </section>
+        <section class="kaufman">
+          <img class="kaufman__triangle" src="./images/logo/kaufman-triangle.svg">
+          <div class="kaufman__theme-dark">
+            <h1 class="kaufman__header1">Принципы обучения</h1>
+          </div>
+          <div class="section__subtitle-theme-dark">
+            <h3 class="digits__header2">От Джоша Кауфмана</h3>
+          </div>
+          <div class="kaufman__table-dark">
+            <div class="table__cell-theme-dark">
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">1</div>
+                <div class="table__text-theme-dark">Выберите привлекательный проект.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">2</div>
+                <div class="table__text-theme-dark">Сосредоточьтесь на каком-то одном навыке.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">3</div>
+                <div class="table__text-theme-dark">Определите целевой уровень мастерства.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">4</div>
+                <div class="table__text-theme-dark">Разбейте навык на элементы.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">5</div>
+                <div class="table__text-theme-dark">Приготовьте всё необходимое для занятий.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">6</div>
+                <div class="table__text-theme-dark">Устраните препятствия для занятий.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">7</div>
+                <div class="table__text-theme-dark">Выделите специальное время для занятий.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">8</div>
+                <div class="table__text-theme-dark">Создайте быстрые петли обратной связи.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">9</div>
+                <div class="table__text-theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+              </div>
+              <div class="table__heading-theme-dark">
+                <div class="table__heading-theme-dark">10</div>
+                <div class="table__text-theme-dark">Уделяйте внимание количеству и скорости.</div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column-content-copyright">
+            <img src="./images/logo_place_footer.svg" class="logo logo__place-footer">
+            <p class="footer__author">&copy; Александр Гаврилов</p>
+          </div>
+          <!--Вроде верно-->
+          <div class="footer__column-content-info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <nav class="footer__column-links"> 
+              <a class="footer__columns-link" href="#">Главная</a>
+              <a class="footer__columns-link" href="#">Концепция</a>
+              <a class="footer__columns-link" href="#">Наставники</a>
+            </nav>
+          </div>
+          <div class="footer__column-content-social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <a href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg">Facebook</a>
+            <a href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg">ВКонтакте</a>
+            <a href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg">Instagram</a>
+          </div>
+        </div>
+      </footer>
     </div>
-    <div class="header__title">
-      <h1 class="header__h1">Научиться учиться</h1>
-    </div>
-    <div class="header__subtitle"><p class="header__subtitle-paragraph">Какие современные и эффективные
-    подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать-></a></p>
-  </div>
-  <div class="header__main-ilustration">
-    <img class="header__ilustration" src="images/header-image.png" alt="Опять двойка">
-  </div>
-  <div class="header__square-pic">
-  </div>
-   </header>
-  <section class="content">
-   <section class="description">
-    <div class="description__two-colums">
-      <div class="two-colums-brief">
-        <a href="#" class="description__link">Главные проблемы в обучении</a>
-      </div>
-    </div>
-    <div class="description__main-text">
-      <p class="description__main-text-paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-      </p>
-      <p class="description__main-text-paragraph"><span class="span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-      </p>
-      <p class="description__main-text-paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-      </p>
-    </div>
-   </section>
-  </section>
-  <section class="digits">
-    <div class="digits__section-title">
-      <h1 class="digits__header1">Цифры и факты</h1>
-    </div>
-    <div class="digits__section-subtitle">
-      <h3 class="digits__header2">Про учёбу и мозг</h3>
-    </div>
-    <div class="digits__table">
-      <div class="digits__table-cell">
-        <div class="digits__table-heading">
-          <div class="table__heading">86 миллиардов</div>
-          <div class="table__text">Число нейронов в мозге человека</div>
-        </div>
-        <div class="digits__table-heading">
-          <div class="table__heading">2,1 миллиарда</div>
-          <div class="table__text">Число нуждающихся в повышении квалификации</div><div class="table__text-margin">Всемирный Банк, 2017</div>
-        </div>
-         <div class="digits__table-heading">
-          <div class="table__heading">1000 терабайт</div>
-          <div class="table__text">Объём памяти человека</div>
-        </div>
-         <div class="digits__table-heading">
-          <div class="table__heading">500 триллионовов</div>
-          <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
-        </div>
-         <div class="digits__table-heading">
-          <div class="table__heading">420 миллионов</div>
-          <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</div><div class="table__text-margin">Всемирный Банк, 2017</div>
-        </div>
-         <div class="digits__table-heading">
-          <div class="table__heading">17-20 лет</div>
-          <div class="table__text">Пик обучаемости</div>
-        </div>
-         <div class="digits__table-heading">
-          <div class="table__heading">1885 год</div>
-          <div class="table__text">Открытие кривой забывания</div>
-        </div>
-         <div class="digits__table-heading">
-          <div class="table__heading">1889 год</div>
-          <div class="table__text">Открытие условного рефлекса</div>
-        </div>
-      </div>
-      </div>
-  </section>
-  <section class="feynman">
-    <div class="feynman__title">
-      <h1 class="feynman__header1">Метод Фейнмана</h1>
-    </div>
-    <div class="feynman__subtitle">
-      <h1 class="feynman__header2">Выучить и не забыть.</h1>
-    </div>
-    <div class="feynman__link">
-      <a href="#">Подробнее -></a>
-    </div>
-    <div class="feynman__image">
-      <img src="./images/feynman.png" alt="Ричард Фенман">
-    </div>
-  </section>
-  <section class="kaufman">
-    <img class="kaufman__triangle" src="./images/kaufman-triangle.svg">
-    <div class="kaufman__section-title_theme_dark">
-      <h1 class="kaufman__header1">Принципы обучения</h1>
-    </div>
-    <div class="kaufman__section-subtitle_theme_dark">
-      <h3 class="digits__header2">От Джоша Кауфмана</h3>
-    </div>
-    <div class="kaufman__table_theme_dark">
-      <div class="kaufman__table-cell_theme_dark">
-        <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">1</div>
-          <div class="table__text_theme_dark">Выберите привлекательный проект.</div>
-        </div>
-        <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">2</div>
-          <div class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
-        </div>
-         <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">3</div>
-          <div class="table__text_theme_dark">Определите целевой уровень мастерства.</div>
-        </div>
-         <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">4</div>
-          <div class="table__text_theme_dark">Разбейте навык на элементы.</div>
-        </div>
-         <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">5</div>
-          <div class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
-        </div>
-         <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">6</div>
-          <div class="table__text_theme_dark">Устраните препятствия для занятий.</div>
-        </div>
-         <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">7</div>
-          <div class="table__text_theme_dark">Выделите специальное время для занятий.</div>
-        </div>
-         <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">8</div>
-          <div class="table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
-        </div>
-        <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">9</div>
-          <div class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
-        </div>
-        <div class="kaufman__table-heading_theme_dark">
-          <div class="table__heading_theme_dark">10</div>
-          <div class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
-        </div>
-      </div>
-      </div> 
-  </section>
-  <footer class="footer">
-    <div class="footer__columns">
-    <div class="footer__columns-content-copyright">
-      <img src="./images/logo_place_footer.svg" class="logo footer__place_logo">
-     <div class="footer__author"><p style="margin: 0">&COPY;Александр Гаврилов</p></div>
-    </div>
-    <div class="footer__column_content-info">
-      <div class="footer__column-heading">
-        <h3>О Практикуме</h3>
-        <div class="footer__column-links">
-          <p>Главная</p>
-          <p>Концепция</p>
-          <p style="margin-bottom: 16px;">Наставники</p>
-      </div>
-      </div>
-  </div>
-  <div class="footer__column_content-social">
-    <h3>Соцсети</h3>
-      <a href="#"><img class="footer__social_icon" src="./images/facebook_color_white.svg">Facebook</a>
-      <a href="#"><img class="footer__social_icon" src="./images/vk_color_white.svg">ВКонтакте</a>
-      <a href="#"><img class="footer__social_icon" src="./images/instagram_color_white.svg">Instagram</a>
-  </div>
-  </div>
-  </footer>
-  </div>
-</body>
+  </body>
 </html>
